Add basic HTML structure to header, ctn-score, ctn-playground and ctn-options

--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
 </head>
 
 <body>
+    <header>
+        <h1>Discover the Secret Code</h1>
+        <div class="ctn-secret-code">
+            <div class="secret-code">
+                <div class="secret-code-square">?</div>
+                <div class="secret-code-square">?</div>
+                <div class="secret-code-square">?</div>
+                <div class="secret-code-square">?</div>
+                <div class="secret-code-square">?</div>
+            </div>
+            <div class="music-and-rules">
+                <span class="music-on"></span>
+                <span class="music-off"></span>
+                <span class="rules"></span>
+            </div>
+        </div>
+        <div class="ctn-score">
+            <p class="time">Time: <span id="time-elapsed">00:00</span></p>
+            <p class="moves">Moves: <span id="moves-needed">0</span></p>
+        </div>
+        <div class="ctn-playground">
+            <div class="squares-grid"></div>
+            <div class="circles-grid"></div>
+        </div>
+        <div class="ctn-options">
+            <h2>Pick Your Color</h2>
+            <div class="colors"></div>
+            <button>Check Code</button>
+            <button>Restart</button>
+        </div>
+
+    </header>
+
 
 
     <script src="assets/js/script.js"></script>
