Add content and style to the header

--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
 
 <body>
     <header>
-        <h1>Discover the Secret Code</h1>
-        <div id="ctn-secret-code">
-            <div id="secret-code">
-                <div class="secret-code-square"><i class="fa-solid fa-question"></i></div>
-                <div class="secret-code-square"><i class="fa-solid fa-question"></i></div>
-                <div class="secret-code-square"><i class="fa-solid fa-question"></i></div>
-                <div class="secret-code-square"><i class="fa-solid fa-question"></i></div>
-                <div class="secret-code-square"><i class="fa-solid fa-question"></i></div>
+        <h1 class="main-heading">Discover the Secret Code</h1>
+        <div id="ctn-code-music-rules">
+            <div id="ctn-secret-code">
+                <div class="secret-code-square"><i class="fa-solid fa-key"></i></div>
+                <div class="secret-code-square"><i class="fa-solid fa-key"></i></div>
+                <div class="secret-code-square"><i class="fa-solid fa-key"></i></div>
+                <div class="secret-code-square"><i class="fa-solid fa-key"></i></div>
+                <div class="secret-code-square"><i class="fa-solid fa-key"></i></div>
             </div>
-            <div id="music-and-rules">
-                <span id="music-on"></span>
-                <span id="music-off"></span>
-                <span id="rules"></span>
+            <div id="ctn-music-and-rules">
+                <div id="music">
+                    <span id="music-note"><i class="fa-solid fa-music"></i></span>
+                    <!-- <span id="music-on"><i class="fa-solid fa-circle-play"></i></span>
+                    <span id="music-off"><i class="fa-solid fa-stop"></i></span> -->
+                </div>
+                <div id="rules"><i class="fa-solid fa-question"></i></div>
             </div>
         </div>
     </header>
