style: Increase size for the secret code for 800px and wider

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="square color-eight"></div>
         </div>
         <div id="buttons">
-            <button id="check-code">Check Code</button>
+            <button id="check-code">Check</button>
             <button id="restart">Restart</button>
         </div>
     </div>
