Make squares and circles form a single row

--- a/index.html
+++ b/index.html
@@ -42,171 +42,191 @@
         <p id="moves">Moves: <span id="moves-needed">0</span></p>
     </div>
     <div id="ctn-playground">
-        <div id="ctn-squares-grid">
-            <div id="squareRow12" class="square-row">
+        <div id="row11" class="row">
+            <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
             </div>
-            <div id="squareRow11" class="square-row">
+            <div class="circle-row">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div id="row10" class="row">
+            <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
             </div>
-            <div id="squareRow10" class="square-row">
+            <div class="circle-row">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div id="row9" class="row">
+            <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
             </div>
-            <div id="squareRow9" class="square-row">
+            <div class="circle-row">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div id="row8" class="row">
+            <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
             </div>
-            <div id="squareRow8" class="square-row">
+            <div class="circle-row">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div id="row7" class="row">
+            <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
             </div>
-            <div id="squareRow7" class="square-row">
+            <div class="circle-row">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div id="row6" class="row">
+            <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
             </div>
-            <div id="squareRow6" class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-            </div>
-            <div id="squareRow5" class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-            </div>
-            <div id="squareRow4" class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-            </div>
-            <div id="squareRow3" class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-            </div>
-            <div id="squareRow2" class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-            </div>
-            <div id="squareRow1" class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+            <div class="circle-row">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
             </div>
         </div>
-        <div id="ctn-circles-grid">
-            <div id="circleRow12" class="circle-row">
+        <div id="row5" class="row">
+            <div class="square-row">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+            <div class="circle-row">
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
             </div>
-            <div id="circleRow11" class="circle-row">
+        </div>
+        <div id="row4" class="row">
+            <div class="square-row">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+            <div class="circle-row">
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
             </div>
-            <div id="circleRow10" class="circle-row">
+        </div>
+        <div id="row3" class="row">
+            <div class="square-row">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+            <div class="circle-row">
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
             </div>
-            <div id="circleRow9" class="circle-row">
+        </div>
+        <div id="row2" class="row">
+            <div class="square-row">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+            <div class="circle-row">
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
             </div>
-            <div id="circleRow8" class="circle-row">
+        </div>
+        <div id="row1" class="row">
+            <div class="square-row">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+            <div class="circle-row">
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
             </div>
-            <div id="circleRow7" class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+        </div>
+        <div id="row0" class="row">
+            <div class="square-row">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
             </div>
-            <div id="circleRow6" class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-            <div id="circleRow5" class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-            <div id="circleRow4" class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-            <div id="circleRow3" class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-            <div id="circleRow2" class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-            <div id="circleRow1" class="circle-row">
+            <div class="circle-row">
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
