feat: On document load, fill in the squares in color-picker section  with a given color

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
     </header>
+
     <div id="ctn-score">
         <!-- This code is inspired by Love Maths -->
         <p id="time">Time: <span id="time-elapsed">00:00</span></p>
@@ -238,14 +239,14 @@
     <div id="ctn-options">
         <h2 id="second-heading">Pick Your Color</h2>
         <div id="ctn-colors">
-            <div class="square color-one"></div>
-            <div class="square color-two"></div>
-            <div class="square color-three"></div>
-            <div class="square color-four"></div>
-            <div class="square color-five"></div>
-            <div class="square color-six"></div>
-            <div class="square color-seven"></div>
-            <div class="square color-eight"></div>
+            <div class="square color-choice"></div>
+            <div class="square color-choice"></div>
+            <div class="square color-choice"></div>
+            <div class="square color-choice"></div>
+            <div class="square color-choice"></div>
+            <div class="square color-choice"></div>
+            <div class="square color-choice"></div>
+            <div class="square color-choice"></div>
         </div>
         <div id="buttons">
             <button id="check-code">Check</button>
