--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
         </div>
         <div id="row0" class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-row0"></div>
+                <div class="square square-row0"></div>
+                <div class="square square-row0"></div>
+                <div class="square square-row0"></div>
+                <div class="square square-row0"></div>
             </div>
             <div class="circle-row">
                 <div class="circle"></div>
