feat: Add a function which generates new secret code on page load

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <p id="moves">Moves: <span id="moves-needed">0</span></p>
     </div>
     <div id="ctn-playground">
+        <!--the playground structure was insired by https://github.com/LudovicLeGuen/Mastermind-->
         <div id="row11" class="row">
             <div class="square-row">
                 <div class="square"></div>
