feat: Add event listeners to buttons and desing basic structure for the future functions

--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
             <div class="square color-choice"></div>
         </div>
         <div id="buttons">
-            <button id="check-code">Check</button>
-            <button id="restart">Restart</button>
+            <button type="button" data-type="check" id="check-code" class="button">Check</button>
+            <button type="button" data-type="restart" id="restart" class="button">Restart</button>
         </div>
     </div>
 
